# cricket_nepal

./: .env  .env.example  .gitignore  Nepal by numbers.docx  README.md  main.py  match_type_output.csv  pyproject.toml  requirements.txt  setup.py
code/: EDA.py  database_model.py  exploring_json_data_struct.py  extract_matches.py  match_type_output.csv  process_nepal_odi.py
data/Nepal/: Nepal_ODI_matches_cricinfo.xlsx  nepal_matches.csv
data/template/: scoreboard_temple.xlsx  ~$scoreboard_temple.xlsx
data/test/: test.xlsx  test_2_innings_1.csv  test_3_innings_1.csv  test_info.csv  test_innings_1.csv
